...

                        <EditText
                            android:id="@+id/a11"
                            style="@style/MatrixInputStyle"
                            android:hint="a11" />
...

                        <EditText
                            android:id="@+id/a12"
                            style="@style/MatrixInputStyle"
                            android:hint="a12" />
...

                        <EditText
                            android:id="@+id/a13"
                            style="@style/MatrixInputStyle"
                            android:hint="a13" />
...

                        <EditText
                            android:id="@+id/a14"
                            style="@style/MatrixInputStyle"
                            android:hint="a14" />
...

                        <EditText
                            android:id="@+id/a21"
                            style="@style/MatrixInputStyle"
                            android:hint="a21" />
...

                        <EditText
                            android:id="@+id/a22"
                            style="@style/MatrixInputStyle"
                            android:hint="a22" />
...

                        <EditText
                            android:id="@+id/a23"
                            style="@style/MatrixInputStyle"
                            android:hint="a23" />
...

                        <EditText
                            android:id="@+id/a24"
                            style="@style/MatrixInputStyle"
                            android:hint="a24" />
...

                        <EditText
                            android:id="@+id/a31"
                            style="@style/MatrixInputStyle"
                            android:hint="a31" />
...

                        <EditText
                            android:id="@+id/a32"
                            style="@style/MatrixInputStyle"
                            android:hint="a32" />
...

                        <EditText
                            android:id="@+id/a33"
                            style="@style/MatrixInputStyle"
                            android:hint="a33" />
...

                        <EditText
                            android:id="@+id/a34"
                            style="@style/MatrixInputStyle"
                            android:hint="a34" />
...

                        <EditText
                            android:id="@+id/a41"
                            style="@style/MatrixInputStyle"
                            android:hint="a41" />
...

                        <EditText
                            android:id="@+id/a42"
                            style="@style/MatrixInputStyle"
                            android:hint="a42" />
...

                        <EditText
                            android:id="@+id/a43"
                            style="@style/MatrixInputStyle"
                            android:hint="a43" />
...

                        <EditText
                            android:id="@+id/a44"
                            style="@style/MatrixInputStyle"
                            android:hint="a44" />
...

                    <EditText
                        android:id="@+id/b1"
                        style="@style/MatrixInputStyle"
                        android:hint="b1" />
...

                    <EditText
                        android:id="@+id/b2"
                        style="@style/MatrixInputStyle"
                        android:hint="b2" />
...

                    <EditText
                        android:id="@+id/b3"
                        style="@style/MatrixInputStyle"
                        android:hint="b3" />
...

                    <EditText
                        android:id="@+id/b4"
                        style="@style/MatrixInputStyle"
                        android:hint="b4" />
...
