<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground">

    <LinearLayout
        android:id="@+id/parentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHeader"
            style="@style/AppTheme.HeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gaussian_partial_header" />

        <include layout="@layout/layout_matrix4x4" />


        <Button
            android:id="@+id/btnCalculate"
            style="@style/AppTheme.ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:text="@string/solve" />

        <Button
            android:id="@+id/btnBackToMainMenu"
            style="@style/AppTheme.ButtonStyle.Exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/back_to_main_menu" />
    </LinearLayout>
</ScrollView>