...
    <string name="bin_to_decimal">Bin to Decimal</string>
    <string name="dec_to_bin_fractions">Dec to Bin (Fractions)</string>
    <string name="dec_to_bin_integers">Dec to Bin (Integers)</string>
    <string name="decimal_to_octal_desc"><![CDATA[Converts a decimal integer (N) to it\'s equivalent octal value where N > 0]]></string>
    <string name="all_in_one_converter">All in one converter</string>
    <string name="conversion_all_in_one_desc">Enter a decimal number and it will be converted to binary, octal and hexadecimal</string>
    <string name="solve">Solve</string>

    <string-array name="main_menu_legacy">
        <item>1. Decimal to Binary (Fractions)</item>
        <item>2. Decimal to Binary (Integers)</item>
        <item>3. Decimal to Binary (Any Number)</item>
        <item>4. Binary to Decimal</item>
...
